bad/bin_op_ge_array_bool.example_compiler_output
ERROR
[1mbad/bin_op_ge_array_bool.lat:3:13: [1;31merror: [0;1moperator >= is defined only for int values and string values, not `int[]` and `boolean`[m
	new int[3] >= true;
	           [1;32m^[m
